--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <body>
         <h1>Hier gibt es nichts zu sehen! Bitte gehen sie weiter!</h1>
 
-        <img src="/img/404.jpg" alt="Eine Katze mit 404">
+        <img src="img/404.jpg" alt="Eine Katze mit 404">
     </body>
 
     <style>
